--- a/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/drug_list.html
+++ b/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/drug_list.html
@@ -11,34 +11,38 @@
 
 {% block content %}
 {% if object_list %}
-  <table class="table">
-    <thead>
+  <div class="table-responsive">
+    <table class="table">
+      <thead>
+        <tr>
+          <th>{% trans "Name" %}</th>
+          <th>{% trans "Company" %}</th>
+          <th class="text-right">{% trans "Number of studies" %}</th>
+        </tr>
+      </thead>
+    {% for object in object_list %}
       <tr>
-        <th>{% trans "Name" %}</th>
-        <th>{% trans "Company" %}</th>
-        <th class="text-right">{% trans "Number of studies" %}</th>
+        <td>
+          <a href="{{ object.get_absolute_url }}">
+            {{ object.name }}
+          </a>
+        </td>
+        <td>
+          <a href="{{ object.pharma_company.get_absolute_url }}">
+            {{ object.pharma_company.name }}
+          </a>
+        </td>
+        <td class="text-right">
+          {{ object.study_count }}
+        </td>
       </tr>
-    </thead>
-  {% for object in object_list %}
-    <tr>
-      <td>
-        <a href="{{ object.get_absolute_url }}">
-          {{ object.name }}
-        </a>
-      </td>
-      <td>
-        <a href="{{ object.pharma_company.get_absolute_url }}">
-          {{ object.pharma_company.name }}
-        </a>
-      </td>
-      <td class="text-right">
-        {{ object.study_count }}
-      </td>
-    </tr>
-  {% endfor %}
-  </table>
+    {% endfor %}
+    </table>
+  </div>
 {% else %}
-  <p>{% trans "Your search did not give any results" %}</p>
+  <p>
+    {% trans "Your search did not give any results" %}
+  </p>
 {% endif %}
 {% if page_obj.has_other_pages %}
   {% include "pagination.html" with page_obj=page_obj getvars="&"|add:getvars %}
