--- a/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/_drug_search.html
+++ b/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/_drug_search.html
@@ -13,7 +13,7 @@
       </h1>
 
       <p class="efa__search__lead">
-        {% trans "Finde heraus, für welche Medikamente Dein Arzt Geld von der Pharma­industrie bekommen kann!" %}
+        {% trans "Find out what drugs are pushed by the pharma industry." %}
       </p>
 
       <div class="input-group">
