--- a/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/_drug_search.html
+++ b/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/_drug_search.html
@@ -19,7 +19,7 @@
       <div class="input-group">
         {{ form.q }}
         <span class="input-group-btn">
-          <button class="btn btn-default" type="submit">{% trans "Search" %}</button>
+          <button type="submit">{% trans "Search" %}</button>
         </span>
       </div>
 
